remove dependency on apache commons
Signed-off-by: Jan N. Klug <jan.n.klug@rub.de>